src/objects/MX_WF_Catalogo_Comercios_Wallet__c.object
<CustomObject>
    <description>Objeto para la aplicación workflow, permite almacenar los catálogos para el objeto Comercio Wallet</description>
    <fields>
        <fullName>MX_WF_Categor_a__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Categoría</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Categor_as_de_la_imagen__c</fullName>
        <label>Categorías de la imagen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Bienestar</fullName>
                </value>
                <value>
                    <fullName>Cafetería</fullName>
                </value>
                <value>
                    <fullName>Decoración hogar</fullName>
                </value>
                <value>
                    <fullName>Departamentales</fullName>
                </value>
                <value>
                    <fullName>Educación</fullName>
                </value>
                <value>
                    <fullName>Entretenimiento</fullName>
                </value>
                <value>
                    <fullName>Farmacia</fullName>
                </value>
                <value>
                    <fullName>Florería</fullName>
                </value>
                <value>
                    <fullName>Gasolineras</fullName>
                </value>
                <value>
                    <fullName>Joyería</fullName>
                </value>
                <value>
                    <fullName>Juguetería</fullName>
                </value>
                <value>
                    <fullName>Librería</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                    <isActive>false</isActive>
                    <label>Liverpool</label>
                </value>
                <value>
                    <fullName>Logos de marcas</fullName>
                </value>
                <value>
                    <fullName>Mascota</fullName>
                </value>
                <value>
                    <fullName>Médicos</fullName>
                </value>
                <value>
                    <fullName>Mensfashion</fullName>
                </value>
                <value>
                    <fullName>Mercadolibre</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Papelería</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Servicio</fullName>
                </value>
                <value>
                    <fullName>Supermercado</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
                <value>
                    <fullName>Tienda de ropa</fullName>
                </value>
                <value>
                    <fullName>Viaje y hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Categoria_Tipo_Descuento__c</fullName>
        <description>Campo que permite diferenciar los tipos de descuentos de los &quot;otros&quot; descuentos</description>
        <label>Categoría de tipo de descuento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tipo de Descuento</fullName>
                </value>
                <value>
                    <fullName>Otro Tipo de Descuento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Codigo__c</fullName>
        <description>Codigo que identifica los comercios, tipos de descuentos y tarjetas</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Código</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Imagen_de_WALLET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imagen de WALLET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Imagen_de_muestra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imagen de muestra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Vigente__c</fullName>
        <label>Vigente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                    <default>true</default>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_imagen__c</fullName>
        <formula>if(ISBLANK( MX_WF_imgURL__c ), &quot;&quot;, IMAGE( MX_WF_imgURL__c , &quot;Imagen&quot;, 100, 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Imagen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_imgURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Imágen URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tipo_de_cat_logo__c</fullName>
        <label>Tipo de catálogo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Categoría</fullName>
                </value>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Descuento</fullName>
                </value>
                <value>
                    <fullName>Imagen</fullName>
                </value>
                <value>
                    <fullName>Otro tipo de descuento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Catálogo WALLET</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Categor_as_WALLET</fullName>
        <columns>NAME</columns>
        <columns>MX_WF_Codigo__c</columns>
        <columns>MX_WF_Vigente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_WF_Catalogo_Comercios_Wallet__c.MX_WF_Catalogo_de_Categorias</value>
        </filters>
        <label>Categorías WALLET</label>
    </listViews>
    <listViews>
        <fullName>Comercios_WALLET</fullName>
        <columns>MX_WF_Codigo__c</columns>
        <columns>NAME</columns>
        <columns>MX_WF_Vigente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_WF_Catalogo_Comercios_Wallet__c.MX_WF_Catalogo_de_comercios</value>
        </filters>
        <label>Comercios WALLET</label>
    </listViews>
    <listViews>
        <fullName>Im_genes</fullName>
        <columns>NAME</columns>
        <columns>MX_WF_imagen__c</columns>
        <columns>MX_WF_imgURL__c</columns>
        <columns>MX_WF_Categor_as_de_la_imagen__c</columns>
        <columns>MX_WF_Vigente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_WF_Vigente__c</field>
            <operation>equals</operation>
            <value>Sí</value>
        </filters>
        <filters>
            <field>MX_WF_Categor_a__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Imágenes</label>
    </listViews>
    <listViews>
        <fullName>Otro_tipo_de_promoci_n</fullName>
        <columns>NAME</columns>
        <columns>MX_WF_Vigente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_WF_Catalogo_Comercios_Wallet__c.MX_WF_Catalogo_Tipo_de_Descuento</value>
        </filters>
        <filters>
            <field>Tipo_de_cat_logo__c</field>
            <operation>equals</operation>
            <value>Otro tipo de descuento</value>
        </filters>
        <label>Otro tipo de promoción</label>
    </listViews>
    <listViews>
        <fullName>Tipos_de_promociones</fullName>
        <columns>NAME</columns>
        <columns>Tipo_de_cat_logo__c</columns>
        <columns>MX_WF_Vigente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_WF_Catalogo_Comercios_Wallet__c.MX_WF_Catalogo_Tipo_de_Descuento</value>
        </filters>
        <filters>
            <field>Tipo_de_cat_logo__c</field>
            <operation>equals</operation>
            <value>Descuento</value>
        </filters>
        <label>Tipos de promociones</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogos WALLET</pluralLabel>
    <recordTypes>
        <fullName>MX_WF_Catalogo_Imagenes</fullName>
        <active>true</active>
        <label>Catálogo Imágenes</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Catalogo_Tipo_de_Descuento</fullName>
        <active>true</active>
        <label>Catálogo Tipo de Descuento</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Catalogo_de_Categorias</fullName>
        <active>true</active>
        <label>Catálogo de Categorias</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Catalogo_de_comercios</fullName>
        <active>true</active>
        <label>Catálogo de Comercios</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>